--- a/workshop3/workshop3.csproj
+++ b/workshop3/workshop3.csproj
@@ -7,4 +7,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="trooperConverter" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="trooperConverter" />
+  </ItemGroup>
+
 </Project>
